--- a/src/views/index.css
+++ b/src/views/index.css
@@ -20,7 +20,7 @@ body{
 }
 
 
-.UserItem-righttBox{
+.UserItem-rightBox {
   width: 80%;
   display: flex;
   flex-direction: column;
@@ -45,4 +45,11 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.Home-Loader{
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
 }
