--- a/src/views/index.css
+++ b/src/views/index.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Gugi');
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
   background: #ccc;
   font-family: 'Gugi', cursive;
