--- a/src/components/index.css
+++ b/src/components/index.css
@@ -1,25 +1,49 @@
-.UserDetailCover{
+.UserDetailCover {
   width: 100%;
   height: 30vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #fff;
+  background: #eee;
+  flex-direction: column;
+  padding: 10px 0;
 }
 
-.UserDetailCover-img{
-  width: 90px;
+.UserDetailCover h2 {
+  font-size: 18px;
+}
+
+.UserDetailCover-img {
+  width: 63px;
+  display: block;
   border-radius: 50%;
+  -webkit-box-shadow: 0px 0px 0px 3px #ccc;
   box-shadow: 0px 0px 0px 3px #ccc;
+  margin-top: 15px;
 }
 
-.UserDetailBody{
+.UserDetailBody {
   background: #e8e8e8;
   height: 60vh;
 }
 
-.UserPost{
+.UserPost {
   display: flex;
   background: #fff;
   flex-direction: column;
+  padding: 10px;
+}
+
+.UserPost:nth-child(even){
+  border-top: 1px solid #ddd;
+}
+
+.UserPost > h1 {
+  font-size: 1em;
+  margin: 0;
+}
+
+.UserPost>h2 {
+  font-size: 0.9em;
+  margin: 0;
 }
